fix css on mobile

--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -127,6 +127,9 @@ body.sidebar-footer {
 @media only screen and (min-width: 750px) {
   aside.sidebar { @include collapse-sidebar; }
 }
+@media only screen and (max-width: 750px) {
+  aside.sidebar { @include collapse-sidebar; }
+}
 #main, #content, .sidebar {
   @extend .group;
 }
