--- a/source/stylesheets/blog.css
+++ b/source/stylesheets/blog.css
@@ -4,7 +4,7 @@ h2 {
 
 #content {
     overflow: visible;
-    margin-right: 300px;
+    /*margin-right: 300px;*/
     position: relative;
 }
 .blog-index {
